[gd_scene load_steps=3 format=3 uid="uid://beypr510eoqml"]

[ext_resource type="Script" uid="uid://2dnwg3gkbaeg" path="res://source/client/ui/menus/player_profile/player_profile.gd" id="1_fnhhi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x41y2"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.237539, 0.237539, 0.237539, 1)

[node name="PlayerProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnhhi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 25.0
offset_right = -38.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x41y2")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "money: 0
character_class: knight
level: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "hori"

[node name="Control" type="CenterContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control"]
layout_mode = 2
[node name="ProfileViewportContainer" type="SubViewportContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control/ProfileViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3
size = Vector2i(300, 260)

[node name="PreviewRoot" type="Node3D" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control/ProfileViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control/ProfileViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2.5, 1.5)
light_intensity_lumens = 900.0

[node name="Camera3D" type="Camera3D" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control/ProfileViewportContainer/SubViewport"]
transform = Transform3D(0.707107, 0, -0.707107, 0.258819, 0.965926, 0.258819, 0.65974, -0.258819, 0.70588, 4, 2.5, 4)
current = true
fov = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
alignment = 1

[node name="MessageButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Message"

[node name="FriendButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add friend"

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
